Modifications: suppression texte présentation, nouveau titre école, tarif reformulé, lien site agrandi

--- a/lozhaprimaire.html
+++ b/lozhaprimaire.html
@@ -91,8 +91,6 @@
                             <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 30px;Margin-bottom: 24px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
                                 <div class="logo-center" style="font-size:26px !important;line-height:32px !important;" align="center">
                                     <img src="https://raw.githubusercontent.com/JIMROCKBAN/lozhaprimaire/main/logo-petit-miroir.jpeg" alt="Théâtre du Petit Miroir" width="140" style="border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 10px;">
-                                    <br>
-                                    <a style="text-decoration: none;transition: opacity 0.1s ease-in;color: #d32f2f;font-weight: 600;" href="https://www.theatredupetitmiroir.com/">le théâtre du Petit Miroir présente</a>
                                 </div>
                             </div>
                         </div>
@@ -104,10 +102,10 @@
                                 <div class="column" style="text-align: left;color: #60666d;font-size: 14px;line-height: 21px;font-family: Open Sans,sans-serif;">
                                     <div style="Margin-left: 20px;Margin-right: 20px;Margin-top: 24px;Margin-bottom: 24px;">
                                         <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
-                                            <h1 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #d32f2f;font-size: 22px;line-height: 31px;font-family: Georgia,serif;text-align: center;font-weight: 700;">Nous venons dans votre ecole</h1>
+                                            <h1 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #d32f2f;font-size: 22px;line-height: 31px;font-family: Georgia,serif;text-align: center;font-weight: 700;">nous présentons le spectacle dans votre école</h1>
                                             <h1 style="Margin-top: 20px;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #b71c1c;font-size: 24px;line-height: 31px;font-family: Georgia,serif;text-align: center;font-weight: 700;"><span style="text-decoration: inherit;color: #d32f2f;">L'ENFANT MAGIQUE ET LE ROI DRAGON</span></h1>
                                             <p class="size-16" style="Margin-top: 20px;Margin-bottom: 0;font-size: 16px;line-height: 24px;text-align: center;color: #666;"><span style="text-decoration: inherit;color: #d32f2f;"><strong><em>Spectacle musical d'ombres chinoises</em></strong></span></p>
-                                            <p class="size-18" style="Margin-top: 20px;Margin-bottom: 0;font-size: 15px;line-height: 26px;text-align: center;color: #666;"><em>animation après la représentation</em></p>
+                                            <p class="size-18" style="Margin-top: 20px;Margin-bottom: 0;font-size: 15px;line-height: 26px;text-align: center;color: #666;"><em>animation après le spectacle</em></p>
                                         </div>
                                     </div>
                                 </div>
@@ -137,7 +135,7 @@
                                         <div style="mso-line-height-rule: exactly;mso-text-raise: 11px;vertical-align: middle;">
                                             <h1 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 22px;line-height: 31px;font-family: Cabin,Avenir,sans-serif;text-align: center;">&nbsp;</h1>
                                             <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #d32f2f;font-weight: 600;" href="https://www.youtube.com/watch?v=_GsBTxsf9iY">VIDEO DU SPECTACLE CLIQUEZ ICI</a></p>
-                                            <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;color: #333;font-weight: 600;">TARIF: 750 € 1 représentation avec animation jusqu'à 4 cours&nbsp;</p>
+                                            <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;color: #333;font-weight: 600;">tarif : 750 euros par représentation pour quatre classes</p>
                                             
                                             <!-- Contact avec style template -->
                                             <div style="background-color: #fffbf5; border-left: 3px solid #d32f2f; padding: 15px 20px; border-radius: 4px; margin: 20px 0;">
@@ -150,7 +148,7 @@
                                                 </p>
                                             </div>
                                             
-                                            <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #d32f2f;font-weight: 600;" href="https://www.theatredupetitmiroir.com/">Visitez notre site</a></p>
+                                            <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #d32f2f;font-weight: 600;font-size: 18px;" href="https://www.theatredupetitmiroir.com/">Visitez notre site</a></p>
                                             <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;"><em><span style="text-decoration: inherit;color: #0aad36;"><strong>L'Enfant magique et le Roi Dragon</strong> est le premier spectacle à avoir été Invité par le musée du Quai Branly Jacques Chirac</span></em></p>
                                         </div>
                                     </div>
