Logo rendu cliquable vers le site web

--- a/lozhaprimaire.html
+++ b/lozhaprimaire.html
@@ -90,7 +90,9 @@
                         <div class="header" style="Margin: 0 auto;max-width: 600px;min-width: 320px; width: 320px;width: calc(28000% - 167400px);">
                             <div class="logo emb-logo-margin-box" style="font-size: 26px;line-height: 32px;Margin-top: 30px;Margin-bottom: 24px;color: #c3ced9;font-family: Roboto,Tahoma,sans-serif;Margin-left: 20px;Margin-right: 20px;" align="center">
                                 <div class="logo-center" style="font-size:26px !important;line-height:32px !important;" align="center">
-                                    <img src="https://raw.githubusercontent.com/JIMROCKBAN/lozhaprimaire/main/logo-petit-miroir.jpeg" alt="Théâtre du Petit Miroir" width="140" style="border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 10px;">
+                                    <a href="https://www.theatredupetitmiroir.com/" style="display: block;">
+                                        <img src="https://raw.githubusercontent.com/JIMROCKBAN/lozhaprimaire/main/logo-petit-miroir.jpeg" alt="Théâtre du Petit Miroir" width="140" style="border-radius: 6px; box-shadow: 0 2px 8px rgba(0,0,0,0.1); margin-bottom: 10px;">
+                                    </a>
                                 </div>
                             </div>
                         </div>
