Suppression 'Pas d'images?' et ajout 'animation après le spectacle' avec plus grande police

--- a/lozhaprimaire.html
+++ b/lozhaprimaire.html
@@ -83,7 +83,7 @@
                                     <p style="Margin-top: 0;Margin-bottom: 0;">Ombres chinoises authentiques</p>
                                 </div>
                                 <div class="webversion" style="display: table-cell;Float: left;font-size: 12px;line-height: 19px;max-width: 280px;min-width: 139px; width: 139px;width: calc(14100% - 78680px);padding: 10px 0 5px 0;text-align: right;color: #b9b9b9;font-family: Open Sans,sans-serif;">
-                                    <p style="Margin-top: 0;Margin-bottom: 0;">Pas d'images ? <a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #b9b9b9;" href="{webview_url}">Version web</a></p>
+                                    <p style="Margin-top: 0;Margin-bottom: 0;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #b9b9b9;" href="{webview_url}">Version web</a></p>
                                 </div>
                             </div>
                         </div>
@@ -138,6 +138,7 @@
                                             <h1 style="Margin-top: 0;Margin-bottom: 0;font-style: normal;font-weight: normal;color: #44a8c7;font-size: 22px;line-height: 31px;font-family: Cabin,Avenir,sans-serif;text-align: center;">&nbsp;</h1>
                                             <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;"><a style="text-decoration: underline;transition: opacity 0.1s ease-in;color: #d32f2f;font-weight: 600;" href="https://www.youtube.com/watch?v=_GsBTxsf9iY">VIDEO DU SPECTACLE CLIQUEZ ICI</a></p>
                                             <p style="Margin-top: 20px;Margin-bottom: 0;text-align: center;color: #333;font-weight: 600;">tarif : 750 euros par représentation pour quatre classes</p>
+                                            <p style="Margin-top: 15px;Margin-bottom: 0;text-align: center;color: #d32f2f;font-size: 18px;font-weight: 600;font-style: italic;">animation après le spectacle</p>
                                             
                                             <!-- Contact avec style template -->
                                             <div style="background-color: #fffbf5; border-left: 3px solid #d32f2f; padding: 15px 20px; border-radius: 4px; margin: 20px 0;">
